--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "SSC",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
-    "dev": "cross-env NODE_ENV=development nodemon app"
+    
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Luigi Isberto",
   "license": "ISC",
