readded start script

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "nodemon": "^2.0.4"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
