--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mongoose": "^5.9.22",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react": "^16.13.1",
+    "react-scripts": "^3.4.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
