--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "ISC",
   "repository": "github.com/luigicode/startup.git",
   "dependencies": {
+    "@testing-library/react": "^10.4.7",
     "connect-mongo": "^3.2.0",
+    "create-react-app": "^3.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.6",
@@ -18,16 +20,32 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "test-integrity": "^2.0.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
+    "react-scripts": "^3.4.1",
     "nodemon": "^2.0.4"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production node app",
     "dev": "cross-env NODE_ENV=development nodemon app",
     "build": "react-scripts build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
